// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should match snapshot of Caption with UNSAFE_style. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
      },
      {
        "backgroundColor": "red",
      },
    ]
  }
  testID="Caption"
>
  Caption Test
</Text>
`;

exports[`Should match snapshot of Caption with default weight. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
      },
      {},
    ]
  }
  testID="Caption"
>
  Caption Test
</Text>
`;

exports[`Should match snapshot of Caption with weight of 400. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "400",
        "lineHeight": 16,
      },
      {},
    ]
  }
  testID="Caption"
>
  Caption Test
</Text>
`;

exports[`Should match snapshot of Caption with weight of 700. 1`] = `
<Text
  accessibilityRole="text"
  style={
    [
      {
        "color": "#2e2f32",
        "fontFamily": "Bogle",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "700",
        "lineHeight": 16,
      },
      {},
    ]
  }
  testID="Caption"
>
  Caption Test
</Text>
`;
